update home hero section with translation

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -3,5 +3,11 @@
     "support-us": "Support Us",
     "about": "About",
     "curriculum": "Curriculum"
+  },
+
+  "home": {
+    "title": "We Help the Locals to be Global-ready tech talent",
+    "sub-title": "Start your career in tech industry as web programmer or mobile developer",
+    "join-cta": "Join Us"
   }
 }
