--- a/locales/id-ID.json
+++ b/locales/id-ID.json
@@ -3,5 +3,11 @@
     "support-us": "Dukung Kami",
     "about": "Tentang Kami",
     "curriculum": "Kurikulum"
+  },
+
+  "home": {
+    "title": "Apakah Kamu Siap Menjadi Talenta Teknologi Lokal Berdaya Saing Global?",
+    "sub-title": "Mulai karirmu di bidang teknologi sebagai programmer, web atau mobile developer",
+    "join-cta": "Gabung Komunitas"
   }
 }
