--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -6,7 +6,7 @@
   },
 
   "home": {
-    "title": "We Help the Locals to be Global-ready tech talent",
+    "title": "We Help You to be a job-ready tech talent",
     "sub-title": "Start your career in tech industry as web programmer or mobile developer",
     "join-cta": "Join Us"
   }
