--- a/locales/id-ID.json
+++ b/locales/id-ID.json
@@ -6,7 +6,7 @@
   },
 
   "home": {
-    "title": "Apakah Kamu Siap Menjadi Talenta Teknologi Lokal Berdaya Saing Global?",
+    "title": "Siap Menjadi Talenta Teknologi Lokal Berdaya Saing Global?",
     "sub-title": "Mulai karirmu di bidang teknologi sebagai programmer, web atau mobile developer",
     "join-cta": "Gabung Komunitas"
   }
