scaffold event and event detail page

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -2,7 +2,8 @@
   "nav": {
     "support-us": "Support Us",
     "about": "About",
-    "curriculum": "Curriculum"
+    "curriculum": "Curriculum",
+    "event": "Event"
   },
 
   "home": {
