--- a/locales/id-ID.json
+++ b/locales/id-ID.json
@@ -2,7 +2,8 @@
   "nav": {
     "support-us": "Dukung Kami",
     "about": "Tentang Kami",
-    "curriculum": "Kurikulum"
+    "curriculum": "Kurikulum",
+    "event": "Acara"
   },
 
   "home": {
