refactor-i18n: extract homepage's text

--- a/locales/id-ID.json
+++ b/locales/id-ID.json
@@ -7,11 +7,11 @@
   },
   "home": {
     "hero-title": "Siap Menjadi Talenta Teknologi Lokal Berdaya Saing Global?",
-    "hero-description": "Mulai karirmu di bidang teknologi sebagai programmer, web atau mobile developer",
+    "hero-sub-title": "Mulai karirmu di bidang teknologi sebagai programmer, web atau mobile developer",
     "hero-cta": "Gabung Komunitas",
-    "who-we-are-session-title": "Siapa Kami?",
-    "who-we-are-session-sub-title": "Komunitas Untuk Memajukan Daerah",
-    "who-we-are-session-description": "Hammercode adalah sebuah komunitas teknologi yang diinisiasi sebagai wadah berkumpulnya para pembelajar, programmer, web/mobile developer, dan pelaku industri teknologi lainnya yang berada di kota Palu dan sekitarnya. Kegiatan-kegiatan yang Kami selenggarakan berorientasi pada knowledge-transfer yang diharapkan dapat mempercepat pemerataan keterampilan di bidang teknologi informasi serta mencetak talenta teknologi yang siap kerja. Hammercode tempat yang cocok untukmu yang ingin belajar tentang coding/pemograman dan software engineering.",
+    "about-us-session-title": "Siapa Kami?",
+    "about-us-session-sub-title": "Komunitas Untuk Memajukan Daerah",
+    "about-us-session-description": "Hammercode adalah sebuah komunitas teknologi yang diinisiasi sebagai wadah berkumpulnya para pembelajar, programmer, web/mobile developer, dan pelaku industri teknologi lainnya yang berada di kota Palu dan sekitarnya. Kegiatan-kegiatan yang Kami selenggarakan berorientasi pada knowledge-transfer yang diharapkan dapat mempercepat pemerataan keterampilan di bidang teknologi informasi serta mencetak talenta teknologi yang siap kerja. Hammercode tempat yang cocok untukmu yang ingin belajar tentang coding/pemograman dan software engineering.",
     "program-session-title": "Program",
     "program-session-sub-title": "Kegiatan Bermanfaat dan Gratis*",
     "program-session-1": "Mentoring",
