--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -5,39 +5,41 @@
     "event": "Events",
     "support-us": "Support Us"
   },
-  "home": {
-    "hero-title": "We Help You to be a job-ready tech talent",
-    "hero-description": "Start your career in tech industry as web programmer or mobile developer",
-    "hero-cta": "Join Us",
-    "who-we-are-session-title": "Who We Are?",
-    "who-we-are-session-sub-title": "Community to Advance our Hometown",
-    "who-we-are-session-description": "Hammercode is tech community initiated as a place for learner, programmer, developer, and the other tech industry players at Palu and surrounding areas. Our activities orienting to knowledge-transfer which is expected to accelerate the distribution of skills in industry and to produce ready to work technology talents",
-    "program-session-title": "Programs",
-    "program-session-sub-title": "Beneficial Activities and Free*",
-    "program-session-1": "Mentoring",
-    "program-description-1": "Our community members from various tech company ready to help you with internship or full-time job application.",
-    "program-session-2": "Workshops & Classes",
-    "program-description-2": "Classes and workshops are available for various fields, such as the web, mobile apps to data. The level of presented material varies, from beginner to advanced.",
-    "program-session-3": "Tech Talk",
-    "program-description-3": "Monthly knowledge sharing activities brought by practitioner from industry and community members.",
-    "program-cta": "More",
-    "impact-session-title": "Our Impact So Far",
-    "impact-session-sub-title": "Some Friends Who Feel the Benefits",
-    "contact-us-title": "Got any question or just want casual chit-chat?",
-    "contact-us-description": "We will love to be connected with you. Just hit the button below ;)",
-    "contact-us-cta": "Contact Us"
+  "home-page": {
+    "hero-section-title": "We Help You to be a job-ready tech talent",
+    "hero-section-sub-title": "Start your career in tech industry as web programmer or mobile developer",
+    "hero-section-cta": "Join Us",
+    "about-us-section-title": "Who We Are?",
+    "about-us-section-sub-title": "Community to Advance our Hometown",
+    "about-us-section-description": "Hammercode is tech community initiated as a place for learner, programmer, developer, and the other tech industry players at Palu and surrounding areas. Our activities orienting to knowledge-transfer which is expected to accelerate the distribution of skills in industry and to produce ready to work technology talents",
+    "program-section-title": "Programs",
+    "program-section-sub-title": "Beneficial Activities and Free*",
+    "program-section-1-title": "Mentoring",
+    "program-section-1-description": "Our community members from various tech company ready to help you with internship or full-time job application.",
+    "program-section-2-title": "Workshops & Classes",
+    "program-section-2-description": "Classes and workshops are available for various fields, such as the web, mobile apps to data. The level of presented material varies, from beginner to advanced.",
+    "program-section-3-title": "Tech Talk",
+    "program-section-3-description": "Monthly knowledge sharing activities brought by practitioner from industry and community members.",
+    "program-section-cta": "More",
+    "impact-section-title": "Our Impact So Far",
+    "impact-section-sub-title": "Some Friends Who Feel the Benefits",
+    "contact-us-section-title": "Got any question or just want casual chit-chat?",
+    "contact-us-section-description": "We will love to be connected with you. Just hit the button below ;)",
+    "contact-us-section-cta": "Contact Us",
+    "mentor-section-title": "Learn From Expert Tech Practitioners",
+    "mentor-section-sub-title": "Take opportunity to learn from experienced tech practitioners from various tech companies"
   },
-  "about_us": {
-    "title": "About Us",
-    "area_of_programs": "Our Programs",
-    "background": "Background",
-    "background_description": "The need for quality technology talent continues to grow. Sadly the skills gap possessed by IT graduates from universities and industry needs is still pretty large. Java and Sumatra got lots of top-level universities with more advanced industry and community ecosystems than other areas, especially Palu, Central Celebes.",
-    "history-session": "History",
-    "history_description": "Hammercode was initiated at 2017 by some people who already works in technology industry",
-    "impact": "Impact",
-    "impact_description": "Hammercode has reached xxx local talent. But unfortunately, still only few who make it into the world of work. Some of our member :",
-    "our_vision": "Our Vision",
-    "partner-title": "Thank you for becoming our partner",
-    "partner_description": "Maybe, It's You!"
+  "about-us-page": {
+    "our-programs": "Our Programs",
+    "background-section-title": "Background",
+    "background-section-description": "The need for quality technology talent continues to grow. Sadly the skills gap possessed by IT graduates from universities and industry needs is still pretty large. Java and Sumatra got lots of top-level universities with more advanced industry and community ecosystems than other areas, especially Palu, Central Celebes.",
+    "history-section-title": "History",
+    "history-section-description": "Hammercode was initiated at 2017 by some people who already works in technology industry",
+    "impact-section-title": "Impact",
+    "impact-section-description": "Hammercode has reached xxx local talent. But unfortunately, still only few who make it into the world of work. Some of our member :",
+    "our-vision": "Our Vision",
+    "partner-section-title": "Thank you for becoming our partner",
+    "partner-section-description": "Maybe, It's You!",
+    "title": "About Us"
   }
 }
