chore: change vendor to facilitator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,7 +91,7 @@
       "4": "Join Hammercode and be a part of positive change in Palu tech community! Together, we can create a brighter future through skills and innovation. Here, you will get full support, development programs, and a fun community to help you grow into a person who is ready to compete in the world of technology. Hammercode is the perfect place for those of you who want to accelerate your career in tech while making a real impact on Palu and beyond😊🔥."
     },
     "side": {
-      "title-1": "Our Founders",
+      "title-1": "Our Facilitators",
       "title-2": "Our Program",
       "event-1": "Yearly Event",
       "event-2": "Monthly Event",
