--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -91,7 +91,7 @@
       "4": "Yuk, gabung dengan Hammercode dan jadi bagian dari perubahan positif di komunitas teknologi Palu! Bareng-bareng, kita bisa menciptakan masa depan yang lebih cerah lewat keterampilan dan inovasi. Di sini, kamu bakal dapetin dukungan penuh, program pengembangan, dan komunitas yang asik buat ngebantu kamu tumbuh jadi orang yang siap bersaing di dunia teknologi. Hammercode adalah tempat yang pas buat kamu yang pengen mempercepat karier di bidang teknologi sekaligus bikin dampak nyata buat Palu dan sekitarnya😊🔥."
     },
     "side": {
-      "title-1": "Pendiri Kami",
+      "title-1": "Fasilitator Kami",
       "title-2": "Program Kami",
       "event-1": "Acara Tahunan",
       "event-2": "Acara Bulanan",
