feat: show pdd 2024 event annoucement

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,5 +109,8 @@
       "event-3": "Instagram Live",
       "event-4": "Weekly Lesson"
     }
+  },
+  "Announcement": {
+    "pdd-2024": "🚀 Hi there! Our annual tech conference Palu Developer Day is around the corner! Check it out!"
   }
 }
