--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -109,5 +109,8 @@
       "event-3": "Siaran Langsung Instagram",
       "event-4": "Pembelajaran Mingguan"
     }
+  },
+  "Announcement": {
+    "pdd-2024": "🚀 Halo! Acara tahunan teknologi Palu Developer Day sudah dekat! Klik di sini!"
   }
 }
